# rust-auth-api

./: .env  .env.example  .gitignore  .windsurfrules  Cargo.toml  Index.md  IndexTree.md  README.md  Tasks.md  bindex.cmd  convert_releases_to_json.py  implementation_manager.py  implementations.json  index.html  melhorias.md  releases.md  releases_implementations.json  rules.md  run_migration.bat  rust_code_index.db  rust_indexer.py  test_api.py
.cargo/: config.toml
data/: auth.db
docs/: location_tracking.md
examples/: keystroke-demo.html
index/: bindex.cmd  rust_code_index.db  rust_indexer.py
migrations/: 20240702_create_security_questions.sql  V1__initial_schema.sql  V2__add_2fa_and_token_rotation.sql  V3__add_keystroke_dynamics.sql  V4__add_oauth_connections.sql  V5__create_rbac_tables.sql  V6__add_recovery_code.sql  V7__update_recovery_code_schema.sql  device_management.sql  email_verification_codes.sql  multiple_recovery_emails.sql  recovery_codes.sql  recovery_email.sql  security_questions.sql  user_login_locations.sql
resources/: reset_cursor.ps1
src/: lib.rs  main.rs
src/config/: mod.rs
src/controllers/: audit_log_controller.rs  auth_controller.rs  device_controller.rs  email_verification_controller.rs  health_controller.rs  keystroke_controller.rs  location_controller.rs  mod.rs  oauth_controller.rs  rbac_controller.rs  recovery_code_controller.rs  recovery_email_controller.rs  security_question_controller.rs  session_policy_controller.rs  time_pattern_controller.rs  token_controller.rs  two_factor_controller.rs  user_controller.rs  webauthn_controller.rs  webhook_controller.rs
src/db/: migrations.rs  mod.rs  pool.rs
src/errors/: mod.rs
src/middleware/: auth.rs  cors.rs  csrf.rs  email_verification.rs  error.rs  keystroke_rate_limiter.rs  keystroke_rate_limiter_fixed.rs  keystroke_rate_limiter_new.rs  logger.rs  mod.rs  permission.rs  rate_limiter.rs  security.rs
src/models/: api.rs  audit_log.rs  auth.rs  device.rs  email_verification.rs  keystroke_dynamics.rs  login_location.rs  mod.rs  oauth.rs  permission.rs  recovery_code.rs  recovery_email.rs  response.rs  role.rs  security_question.rs  session_policy.rs  temporary_password.rs  time_pattern.rs  token.rs  two_factor.rs  user.rs  webauthn.rs  webhook.rs
src/repositories/: audit_log_repository.rs  login_location_repository.rs  mod.rs  rbac_repository.rs  security_question_repository.rs  session_policy_repository.rs  temporary_password_repository.rs  time_pattern_repository.rs
src/routes/: mod.rs
src/services/: audit_log_service.rs  auth_service.rs  device_service.rs  email_service.rs  email_verification_service.rs  keystroke_security_service.rs  keystroke_service.rs  location_risk_service.rs  mod.rs  oauth_service.rs  rbac_service.rs  recovery_code_service.rs  recovery_email_service.rs  security_question_service.rs  session_policy_service.rs  time_pattern_service.rs  token_service.rs  two_factor_service.rs  user_service.rs  webauthn_service.rs  webhook_service.rs
src/utils/: jwt.rs  mod.rs  password.rs  password_argon2.rs  tracing.rs  validator.rs
static/: index.html  styles.css
tests/: api_test.rs  auth_service_test.rs  user_service_test.rs
