[package]
name = "rust-auth-api"
version = "0.1.0"
edition = "2021"
authors = ["Desenvolvedor"]
description = "API REST em Rust com autenticação JWT e SQLite"

[dependencies]
# Framework web
actix-web = "4"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2" # Para servir arquivos estáticos
actix-web-grants = "3.0.1" # Para controle de acesso baseado em roles/permissões
futures = "0.3.28"
futures-util = "0.3"

# Banco de dados
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
refinery = { version = "0.8", features = ["rusqlite"] }
refinery-macros = "0.8"

# Autenticação e segurança
jsonwebtoken = "8.3.0"
bcrypt = "0.15.0"
rand = "0.8"
sha2 = "0.10" # Para hashing de refresh tokens
hex = "0.4"   # Para codificar/decodificar hash
# Novas dependências de segurança
csrf = "0.4.0"  # Proteção contra CSRF
actix-web-httpauth = "0.8.0"  # Autenticação HTTP
argon2 = "0.5.0"  # Algoritmo de hashing mais seguro que bcrypt
totp-rs = "5.6.0"  # Para implementação de 2FA/TOTP
qrcode = "0.12.0"  # Para gerar QR codes para 2FA
base32 = "0.4.0"  # Para codificação base32 usada em 2FA
base64 = "0.21" # Para codificar/decodificar tokens
ring = "0.17" # Para comparação segura
cookie = "0.18" # Helper para construir cookies (usado por actix-web::cookie)
log = "0.4" # Para logging

# OAuth e autenticação social
oauth2 = "4.4.1"  # Cliente OAuth2
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"] }  # Cliente HTTP
url = "2.4.1"  # Manipulação de URLs
async-trait = "0.1.73"  # Para traits assíncronas

# Serialização/Deserialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"

# Configuração
dotenv = "0.15.0"
config = "0.13.3"

# Sistema de logging aprimorado
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.5"

# Email
lettre = { version = "0.10.4", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }

# Utilitários
chrono = { version = "0.4.30", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "v7"] }
thiserror = "1.0" # Para criar erros facilmente
validator = { version = "0.16.1", features = ["derive"] }
rustc_version_runtime = "0.2.1"
tokio = { version = "1.32.0", features = ["full", "sync", "time"] }
woothee = "0.13.0" # Parser de User-Agent para detecção de dispositivos
moka = { version = "0.12", features = ["future"] } # Cache em memória assíncrono ⚡️

[dev-dependencies]
actix-rt = "2.9.0"
